# verstr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: dev.yml  python-publish.yml
src/verstr/: __init__.py
tests/: test_comp.py
