[metadata]
name = verstr
author = Farid Smaï
url = https://github.com/BRGM/verstr
description = Make comparing version strings super simple.
long_description = file: README.md
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    packaging

[options.packages.find]
where = src
