[metadata]
name = verstr
author = fsmai
author_email = f.smai@brgm.fr
url = https://github.com/BRGM/verstr
project_urls = 
    Documentation = https://github.com/BRGM/verstr#readme
    Source code = https://github.com/BRGM/verstr
    Issue Tracker = https://github.com/BRGM/verstr/issues
description = Make comparing version strings super simple.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    # Development Status :: 5 - Production/Stable
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    packaging
zip_safe = true

[options.packages.find]
where = src
